--- a/puppypage/portf/port.css
+++ b/puppypage/portf/port.css
@@ -139,3 +139,68 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
   display: block;
 }
+/* content */
+.contact-left{
+  flex: basis 35% ;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.contact-left p{
+  margin-top: 30px;
+}
+.contact-left p i{
+  color: #086a20;
+  margin: right 15px; 
+  font: size 25px; ;
+}
+.social-icons{
+  margin-top: 30px;
+}
+.social-icons a{
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #226a08;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.social-icons a:hover{
+  color: #cb0a47;
+  transform:translateY(-5px);
+}
+.btnbtn2{
+  display: inline-block;
+  background: #226a08;
+  font-size: 20px;
+  cursor: pointer;
+  
+}
+.contact-right form{
+  width: 100%;
+}
+form input,form textarea{
+  width: 100%;
+  border:0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
+}
+form btnbtn2{
+  padding: 14px 60px;
+  font: size 18px;
+  margin-top: 20px;
+}
+.copyright{
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #226a08;
+  font-weight: 300;
+  margin-top: 20px;
+}
+
