--- a/puppypage/portf/port.css
+++ b/puppypage/portf/port.css
@@ -53,7 +53,7 @@ nav ul li a::after{
   content: '';
   width: 0%;
   height: 3px;
-  background: #ff004f;
+  background: #226a08;
   position: absolute;
   left: 0%;
   bottom: -6px;
@@ -71,7 +71,7 @@ nav ul li a:hover::after{
   margin-top: 20px;
 }
 .header-text h1 span{
-  color: #ff004f;
+  color: #226a08;
 }
 /* about */
 #about{
@@ -116,7 +116,7 @@ nav ul li a:hover::after{
   content: '';
   width: 0;
   height: 3px;
-  background: #ff004f;
+  background: #226a08;
   position: absolute;
   left: 0;
   bottom: -8px;
@@ -130,7 +130,7 @@ nav ul li a:hover::after{
   margin: 10px 0;
 }
 .tab-contents ul li span{
-  color: #cb0a47 ;
+  color: #226a08 ;
   font-size: 13px;
 }
 .tab-contents{
@@ -203,4 +203,7 @@ form btnbtn2{
   font-weight: 300;
   margin-top: 20px;
 }
+/* css for small screen */
+@media only screen and (max-width:500px){
 
+}
