--- a/puppypage/portf/port.css
+++ b/puppypage/portf/port.css
@@ -5,10 +5,13 @@
     font-family:'poppins', 'sans-serif';
     box-sizing: border-box;
   }
-  
+  html{
+    scroll-behavior: smooth;
+  }
   body{
     background:#080808;
     color: #fff;
+    font-family: arial;
   }
   #header{
     width: 100%;
@@ -22,8 +25,10 @@
 
  }
  .logo{
-  width: 50px;
-  transition: 2s ease;}
+  width: 75px;
+  border-radius: 5px;
+  transition: 2s ease;
+}
   .sun{
     color: aqua;
     
@@ -65,10 +70,54 @@ nav ul li a:hover::after{
 .header-text{
   margin-top: 20%;
   font-size: 20px;
+  padding: 10px;
+  position: relative;
+  border-radius: 10px;
+  background-color: #080808;
+  text-align: center;
+}
+@property --angle{
+  syntax: "<angle>";
+  initial-value: 360deg;
+  inherits: false;
+}
+.header-text::after, .header-text::before{
+  content: '';
+  position: absolute;
+  background-image: conic-gradient(from var(--angle),transparent 70%, green);
+  height: 100%;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  z-index: -1;
+  border-radius: 10px;
+  padding: 10px;
+  animation: 3s spin linear infinite;
+
+}
+@keyframes spin{
+  from{
+    --angle: 0deg;
+  }
+  to{
+    ---angle: 360deg;
+  }
+}
+.decription{
+  color: #226a08;
+}
+.and{
+  color: white;
+}
+.header-text::before{
+  filter: blur(1rem);
+  opacity: 0.5;
 }
 .header-text h1{
   font-size: 60px;
   margin-top: 20px;
+  line-height: 100px;
 }
 .header-text h1 span{
   color: #226a08;
@@ -89,6 +138,10 @@ nav ul li a:hover::after{
 }
 .about-col-1 img{
   width: 100%;
+  border-radius: 15px;
+}
+#photo{
+  width: 200px;
   border-radius: 15px;
 }
 .about-col-2{
@@ -172,9 +225,22 @@ nav ul li a:hover::after{
 .btnbtn2{
   display: inline-block;
   background: #226a08;
+  font-weight: 500;
   font-size: 20px;
+  border: none;
+  border-radius: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   cursor: pointer;
-  
+}
+.btnbtn2:hover{
+  background-color: black;
+  color: #226a08;
+  border: solid;
+  border-width: 2px;
+  border-color: #226a08;
 }
 .contact-right form{
   width: 100%;
