--- a/puppypage/portf/port.css
+++ b/puppypage/portf/port.css
@@ -13,26 +13,66 @@
     color: #fff;
     font-family: arial;
   }
-  #header{
-    width: 100%;
-    height: 100vh;
-   
-    background-size: cover;
-  background-position: center; 
- }
- .container{
-  padding: 10px 10%;
-
- }
- .logo{
-  width: 75px;
-  border-radius: 5px;
-  transition: 2s ease;
-}
   .sun{
     color: aqua;
     
   }
+  #header {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center; 
+  }
+  
+  .container {
+    padding: 10px 10%;
+  }
+  
+  /* New or fixed CSS */
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Logo on the left, menu on the right */
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+  }
+  
+  nav ul li {
+    margin: 0 20px;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+  }
+  
+  nav ul li a::after {
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: #226a08;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+  }
+  
+  nav ul li a:hover::after {
+    width: 100%;
+  }
+  
+
+.logo{
+  width: 75px;
+  margin-right: 34px;
+  border-radius: 5px;
+  transition: 2s ease;
+}
   .logo:hover{
    transform: rotate(360deg);
   }
@@ -43,30 +83,6 @@
   justify-content: space-between;
   flex-wrap: wrap;
  }
-nav ul li{
-  display: inline-block;
-  list-style: none;
-  margin: 10px 20px;
-}
-nav ul li a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
-  position: relative;
-}
-nav ul li a::after{
-  content: '';
-  width: 0%;
-  height: 3px;
-  background: #226a08;
-  position: absolute;
-  left: 0%;
-  bottom: -6px;
-  transition: 0.5s;
-}
-nav ul li a:hover::after{
-  width: 100%;
-}
 .header-text{
   margin-top: 20%;
   font-size: 20px;
