--- a/puppypage/portf/port.css
+++ b/puppypage/portf/port.css
@@ -27,12 +27,10 @@
   .container {
     padding: 10px 10%;
   }
-  
-  /* New or fixed CSS */
   nav {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Logo on the left, menu on the right */
+    justify-content: space-between; 
   }
   
   nav ul {
@@ -162,26 +160,22 @@
 }
 .about-col-2{
   flex-basis: 60%;
-
+}
+.about-col-2 p{
+  line-height: 20px;
 }
 .sub-title{
   font-size: 60px;
   font-weight: 600;
-  color: #fff;
-}
-.tab-titles{
-  display: flex;
-  margin: 20px 0 40px;
-}
+  color: #fff;}
 .tab-links{
-  margin-right: 50px;
+  margin: 20px 0 20px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
-  position: relative;
-  
+  position: relative; 
 }
-.tab-links::after{
+ .tab-links::after{
   content: '';
   width: 0;
   height: 3px;
@@ -194,11 +188,11 @@
 .active-link::after{
   width: 50%;
 }
-.tab-contents ul li{
+ .tab-contents ul li{
   list-style: none;
   margin: 10px 0;
 }
-.tab-contents ul li span{
+ ul li span{
   color: #226a08 ;
   font-size: 13px;
 }
@@ -214,26 +208,35 @@
 }
 .skills-list{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
-  
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.skills-list div{
+  background: black;
+  padding: 40px;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 10px;
+  transition: transform 0.5s ;
+} 
+.skills-list div i{
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+.skills-list div h2{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+.skills-list div p{
+  font-size: 16px;
+  line-height: 20px;
+}
+.skills-list div:hover{
+  background: #226a08;
+  transform: translateY(-10px);
+}
 /* content */
 .contact-left{
   flex: basis 35% ;
@@ -312,6 +315,48 @@ form btnbtn2{
   margin-top: 20px;
 }
 /* css for small screen */
-@media only screen and (max-width:600px){
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    background: #111;
+    width: 100%;
+    display: none;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    text-align: center;
+    padding: 10px 0;
+  }
 
+  nav ul.active {
+    display: flex;
+  }
+
+  nav ul li {
+    margin: 10px 0;
+  }
+
+  .container {
+    padding: 10px 5%;
+  }
+
+  .row {
+    flex-direction: column;
+  }
+
+  .header-text h1 {
+    font-size: 40px;
+    line-height: 60px;
+  }
+
+  .skills-list {
+    grid-template-columns: 1fr;
+  }
+
+  .about-col-1,
+  .about-col-2,
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
 }
